# ArchMind

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agent/: agent.py  middleware.py  workflow.py
app/agent/tools/: __init__.py  knowledge_search.py  weather.py  web_search.py
app/api/: router.py
app/api/routes/: auth.py  chat.py  files.py  jobs.py  knowledge.py  memories.py  reports.py  settings.py
app/auth/: __init__.py  dependencies.py  jwt.py  password.py
app/config/: auth.yaml  chroma.yaml  database.yaml  model.yaml  prompt.yaml  rag.yaml  upload.yaml
app/db/: __init__.py  database.py  models.py
app/models/: factory.py
app/prompts/: memory_prompt.txt  rag_prompt.txt  report_prompt.txt  system_prompt.txt  tool_prompt.txt
app/rag/: file_parser.py  vector_store.py
app/schemas/: __init__.py  auth.py  chat.py  files.py  jobs.py  knowledge.py  memory.py  report.py  settings.py
app/services/: __init__.py  auth_service.py  chat_service.py  document_chunk_service.py  file_service.py  job_service.py  memory_service.py  report_service.py  settings_service.py
app/utils/: config_loading_tool.py  file_processing_tool.py  logger_tool.py  path_tool.py  prompts_loading_tool.py
docs/: agent-platform-roadmap.md  resume-project.md  system-status.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
