[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.35.0",
    "chromadb>=1.5.9",
    "dashscope>=1.25.19",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "langchain>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.2.1",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pypdf>=6.12.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.20",
    "tavily-python>=0.7.26",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
